--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@
     text-decoration:none;
     text-align:center;
     text-shadow:1px 1px 0px #ffffff;
+    cursor: pointer;
 }
 .button:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
@@ -82,4 +83,3 @@
     position:relative;
     top:1px;
 }
-asd
